# Qrisp

./: .gitignore  JASP_QDMI_integration.md  JASP_QUANTUM_KERNEL_DIALECT.md
demo/: jasp_mlir_demo.ipynb  qdmi.conf
src/qrisp/jasp/jasp_expression/: centerclass.py
src/qrisp/jasp/mlir/: cpp_emission.py  drop_dead_wrappers.py  hoist_classical_ops.py  jasp_lowering_rules.py  lift_quantum_kernels.py  lower_to_emitc.py  mlir_emission.py  xdsl_dialect.py
src/qrisp/jasp/mlir/dialect_definition/: CMakeLists.txt  JaspOps.td  README.md
src/qrisp/jasp/mlir/dialect_implementation/: _jasp_ops_gen.py
src/qrisp/jasp/mlir/runtime/: Makefile  runtime.c  runtime.h  runtime_internal.h
tests/jax_tests/: test_mlir.py
